# app-hive

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md
.github/workflows/: codeql-analysis.yml
doc/: COMMANDS.md
fuzzing/: CMakeLists.txt  build.sh  coverage.sh  fuzz_hive.c  mocks.c  run.sh
src/: constants.h  crypto.c  crypto.h  main.c  sw.h  types.h
src/apdu/: dispatcher.c
src/common/: bip32.c  buffer.c  buffer.h  format.c  format.h  varint.c  varint.h  wif.c
src/handler/: get_public_key.c  sign_hash.c  sign_hash.h  sign_message.c  sign_message.h  sign_tx.c
src/transaction/: decoders.c  parsers.c  parsers.h  transaction_parse.c  transaction_parse.h
src/ui/: menu.h
src/ui/action/: validate.c  validate.h
src/ui/screens/: confirm_public_key.c  confirm_public_key.h  review_hash.c  review_hash.h  review_message.c  review_message.h  review_transaction.c  settings.c  settings.h  variables.c  variables.h
test/: README.md  package-lock.json  package.json
test/tests/: getAppVersion.test.ts  signMessage.test.ts  signTransaction.test.ts
unit-tests/: CMakeLists.txt
unit-tests/common/: test_buffer.c
unit-tests/transaction/: test_transaction_parse.c
unit-tests/transaction/decoders/: test_decoder_array_of_strings.c  test_decoder_array_of_u64.c  test_decoder_string.c
